Fixed opposite-position() with nested expressions, unwrapping

--- a/test/integration/tests/bifs.opposite-position.styl
+++ b/test/integration/tests/bifs.opposite-position.styl
@@ -5,3 +5,5 @@ body
   foo opposite-position(left) == right
   foo opposite-position(top left)[0] == bottom
   foo opposite-position(top left)[1] == right
+  val = top left
+  foo opposite-position(val)
